# app/Models/User.php
@@ -4,12 +4,10 @@ namespace App\Models;
 
 use Laravel\Sanctum\HasApiTokens;
 use Illuminate\Foundation\Auth\User as Authenticatable;
-use Illuminate\Notifications\Notifiable;
-use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class User extends Authenticatable
 {
-    use HasApiTokens, HasFactory, Notifiable;
+    use HasApiTokens;
 
     protected $fillable = [
         'name',
@@ -18,17 +16,14 @@ class User extends Authenticatable
         'role'
     ];
 
-    protected $hidden = [
-        'password',
-        'remember_token'
-    ];
-
-    protected $casts = [
-        'password' => 'hashed'
-    ];
-
     public function anggota()
     {
-        return $this->hasOne(Anggota::class);
+    return $this->hasOne(
+        Anggota::class
+    );
     }
+
+    protected $hidden = [
+        'password'
+    ];
 }
